<resources>
    <string name="app_name">CV Generator</string>
    <string name="introduction_app">Hello!</string>
    <string name="create_cv">Create CV</string>
    <string name="menu">Menu</string>
    <string name="new_cv">New CV</string>
    <string name="view_cv">View CV</string>
    <string name="generate_xml">Generate XML</string>
    <string name="progress">Progress</string>
    <string name="edit_cv">Edit CV</string>
    <string name="tips">Tips</string>
    <string name="welcome_text">Hello!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="social_networks">Social Networks</string>
    <string name="sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="school">School</string>
    <string name="field_of_study">Field of Study</string>
    <string name="type_of_study">Type</string>
    <string name="start_date">Start Year</string>
    <string name="end_date">End Year</string>
    <string name="social_network1">LinkedIn</string>
    <string name="social_network2">Facebook</string>
    <string name="social_network3">Github</string>
    <string name="social_network4">Skype</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="skill">Skill</string>
    <string name="level">Level</string>
    <string name="cs_skills">IT Skills</string>
    <string name="certificate_name">Name of certificate</string>
    <string name="year">Year</string>
    <string name="to_next_activity">Next</string>
    <string name="add">+</string>
    <string name="createcv_title">Personal Information</string>
    <string name="education_title">Education</string>
    <string name="work_experience_title">Work Experience</string>
    <string name="languages_title">Languages</string>
    <string name="it_skills_title">IT Skills</string>
    <string name="other_skills_title">Other Skills</string>
    <string name="certificates_title">Certificates</string>
    <string-array name="skill_levels">
        <item>Beginner</item>
        <item>Medium</item>
        <item>Advanced</item>
    </string-array>
    <string name="title_activity_itskills">ITSkillsActivity</string>

</resources>
