<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_education"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.monic.cvgenerator.EducationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:shadowColor="@color/colorAccent"
                    android:text="@string/education_title"
                    android:textColor="@color/colorHeader"
                    android:textSize="27dp" />

                <Button
                    android:id="@+id/E_toWorkExperienceBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/to_next_activity"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/E_schoolET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_of_study"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/E_fieldOfStudyET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_study"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/E_typeOfStudyRadioGr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="High School" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bachelor" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Master" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PHD" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/E_startYearSp"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorAccent"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/E_endYearSp"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:textAlignment="center" />
            </GridLayout>

            <Button
                android:id="@+id/E_addEducationBtn"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:background="@color/colorHeader"
                android:text="@string/add"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
